tests/errors/parser/num-without-bitwidth.expect
---CODE---
1
---STDERR---
Error: tests/errors/parser/num-without-bitwidth.futil
4 |    r.in = 1;
  |           ^ Parse error
Expected number with bitwidth (like 32'd10).
